# MusicalKeyCNN

./: .dockerignore  CLAUDE.md  Dockerfile  api.py  audio_utils.py  constants.py  predict_bpm.py  predict_keys.py  preprocess_data.py  pyproject.toml
.github/workflows/: docker-publish.yml
