[project]
name = "musicalkeycnn"
version = "0.1.0"
description = "CNN for musical key detection using PyTorch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "tqdm>=4.65.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "black",
    "ruff",
]
