[project]
name = "musicalkeycnn"
version = "0.1.0"
description = "CNN for musical key detection using PyTorch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "python-multipart>=0.0.9",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchcodec>=0.11.1",
    "tqdm>=4.65.0",
    "uvicorn[standard]>=0.29.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "black",
    "ruff",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
